[package]
name = "todo-grpc"
version = "0.1.0"
edition = "2021"

# Binary for the gRPC server
[[bin]]
name = "server"
path = "src/server.rs"

# Binary for the gRPC client
[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
prost = "0.12.3"
redis = { version = "0.24.0", features = ["tokio-comp"] }
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
